# WhatsMyName

./: .gitignore  .travis.yml  Adding-new-sites.json  CODEOFCONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Fixing-WMN-sites-validity.json  INSTALLATION.md  LICENSE.md  MainFrame.py  README.md  SECURITY.md  UName.py  __init__.py  check_online_presence.py  configParams.py  enum_data.json  goFindThem.py  main.py  pyproject.toml  requirements.txt  sample.json  schema.json  setup.cfg  setup.py  test.json  validate_whats_my_name.py  web_accounts_list-min.json  web_accounts_list.json  web_accounts_list_checker.py  web_accounts_list_checker_screenshots.py  web_accounts_list_checker_threading.py  whats_my_name.py  whatsmyname.py  whatsmyname.sh  wmn-data-min.json  wmn-data-schema.json  wmn-data-schema.json.sha256  wmn-data.json  wmn-data.json.sha256
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broken_detection.yml  config.yml  new_site_request.yml
.github/workflows/: check-for-dupe-url.yml  codeql-analysis.yml  format-json.yml  minify-json.yml  sort-format-json.yml  sync_upstream_wmn.yml  sync_wmn.yml  validate-json.yml  wmn-format-json.yml  wmn-hash-json.yml  wmn-validate-json.yml
goFindThem_pkg_carbonUnit42.egg-info/: PKG-INFO  SOURCES.txt
scripts/: sort_format_json.py  validate_json.py  wmn_base.py  wmn_constants.py  wmn_exceptions.py  wmn_format_json.py  wmn_hash_json.py  wmn_io.py  wmn_logging.py  wmn_validate_json.py
scripts/checker/: README.md  app.py  check_history.json  checker.py  last_check.json  models.py  requirements.txt  wmn_check.py
whatsmyname/: main.py  requirements.txt
(+21 files in other folders)
