[project]
name = "what-is-my-name"
version = "0.0.3"
authors = [
  { name="Micah Hoffman", email="author@example.com" },
  { name="Dan Cardin", email="dcardin2007@gmail.com" },
]
description = "Enumerate over a list of websites and check for registered users by username."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/WebBreacher/WhatsMyName"
"Bug Tracker" = "https://github.com/WebBreacher/WhatsMyName/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.scripts]
check_online_presence = "whatsmyname.main:start_check_for_presence"
other_tool = "other_tool.function:main"
all_the_tools = "other_tool.function:all"