[project]
name = "what-is-my-name"
version = "0.0.3"
authors = [
  { name="Micah Hoffman", email="author@example.com" },
  { name="Dan Cardin", email="dcardin2007@gmail.com" },
]
description = "Enumerate over a list of websites and check for registered users by username."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/WebBreacher/WhatsMyName"
"Bug Tracker" = "https://github.com/WebBreacher/WhatsMyName/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.scripts]
check_for_presence = "whatsmyname.main:check_for_presence"
